include meta data for each blogpost

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: acklen
-title: Acklen Avenue
+title: Home
+description: Acklen Avenue is a team of agile software development professionals who are passionate about clean code and simple user experiences. Nashville, Tennessee
+keywords: Software Development, Agile, Nashville, Web Apps, Mobile Apps, Desktop Apps
+thumbnail: /img/thumbnail.jpg
 ---
 
 <header>
