--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: acklen
-title: Home
+title: Acklen Avenue | Home
+type: website
 description: Acklen Avenue is a team of agile software development professionals who are passionate about clean code and simple user experiences. Nashville, Tennessee
 keywords: Software Development, Agile, Nashville, Web Apps, Mobile Apps, Desktop Apps
-thumbnail: /img/thumbnail.jpg
+thumbnail: https://acklenavenue.com/img/thumbnail.jpg
 ---
-
 <header>
 	{% include menu.html %}
 	{% include homeHeader.html %}
