change facebook metadata and add hotjar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ---
 layout: acklen
+title: Acklen Avenue | Home
+description: Acklen Avenue is a team of agile software development professionals who are passionate about clean code and simple user experiences.
+thumbnail: https://acklenavenue.com/img/thumbnail.jpg
+type: website
+keywords: Acklen Avenue, Agile, lean, start-up, development, Custom Software Development, Mobile Development, Nashville
 ---
 <header>
 	{% include menu.html %}
