add job board and description templates & performance improvements

--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 --- 
-layout: acklen 
+layout: acklen-subfolder 
 permalink: /404.html 
 ---
 
 <div id="notFound">
-    <img src="img/aa-logo-dark.svg" alt="Acklen Avenue">
+    <img src="/img/aa-logo-dark.svg" alt="Acklen Avenue">
     <div class="notFound__wrapper">
         <div class="notFound-content flex-50">
             <h1>Woops...</h1>
@@ -12,7 +12,7 @@ permalink: /404.html
             <a class="btn btn--apple hvr-ripple-out" href="index.html">Back to home</a>
         </div>
         <div class="notFound-img flex-50">
-            <img src="img/404.png" alt="404 image">
+            <img src="/img/404.png" alt="404 image">
         </div>
     </div>
 </div>
