SEO optimization changes (#285)
* Update team.json

* Started changing pages descriptions, added cannonical link to layouts so it is present on all pages

* Removed duplicate title tags

* Added missing descriptions

* Fixed all 'title too long' issues, removed extra title from head and head-subfolder include to prevent duplicate titles

* Renamed some posts to prevent too long urls, fixed js path in includes to prevent 4xx errors, fixed job openings description design

* Fixed 4xx errors

--- a/courses/index.html
+++ b/courses/index.html
@@ -1,6 +1,7 @@
 ---
 layout: acklen-subfolder
-title: Courses | Acklen Avenue
+title: Courses | Acklen Avenue - Custom software development
+description: Coding Courses | We love sharing our experiences and knowledge with the world
 ---
 
 <header class="page-header">
