--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: acklen
-title: Acklen Avenue | Home
-description: Acklen Avenue is a team of agile software development professionals who are passionate about clean code and simple user experiences.
+title: "Acklen Avenue | software development company in Nashville, TN"
+description: Acklen Avenue is a leading custom software development in Nashville, Tennessee. Our talented team is passionate about clean code and simple user experience.
 thumbnail: https://acklenavenue.com/img/thumbnail.jpg
 type: website
 keywords: Acklen Avenue, Agile, lean, start-up, development, Custom Software Development, Mobile Development, Nashville
+permalink: /
 ---
 <header>
 	{% include menu.html %}
