--- a/jobs/index.html
+++ b/jobs/index.html
@@ -1,6 +1,8 @@
 ---
 layout: acklen-subfolder
-title: Job Board | Acklen Avenue
+title: Job Board | Acklen Avenue Careers | We're hiring!
+description: "Jobs | You want a team that will own your success and work
+with the same level of passion that you bring every day. We're hiring!"
 ---
 
 <header class="page-header">
