--- a/our-work/drillnomics.html
+++ b/our-work/drillnomics.html
@@ -1,6 +1,8 @@
 ---
 layout: acklen-subfolder
-title: Drillnomics case study | Acklen Avenue 
+title: Drillnomics, an innovative tool for oil and gas professionals.
+description: "Today, Drillnomics is an innovative tool for oil and gas professionals.
+Learn how they're using our software to get more sales."
 ---
 <header class="page-header page-header--drillnomics">
 	{% include menu.html %}
