--- a/our-work/hurdl.html
+++ b/our-work/hurdl.html
@@ -1,6 +1,8 @@
 ---
 layout: acklen-subfolder
-title: Hurdl case study | Acklen Avenue 
+title: Hurdl Wearable Device Case Study  
+description: "Hurdl was able to custom program their wearables (Pixl)but they were not able to conduct surveys of users or send configuration data from the cloud to the user. 
+	Learn how we developed a custom solution."
 ---
 <header class="page-header page-header--hurdl">
 	{% include menu.html %}
