--- a/our-work/index.html
+++ b/our-work/index.html
@@ -1,6 +1,7 @@
 ---
 layout: acklen-subfolder
-title: Our Work | Acklen Avenue 
+title: Our Work | Custom software projects
+description: Our Work | Tough technological challenges don't stand a chance against our experience, passion, and process. We'll tell you a few stories to prove it.
 ---
 <header class="page-header page-header--ourwork">
 	{% include menu.html %}
