--- a/our-work/tafs.html
+++ b/our-work/tafs.html
@@ -1,6 +1,7 @@
 ---
 layout: acklen-subfolder
-title: Tafs case study | Acklen Avenue 
+title: TAFS Case Study, Big changes for trucking financial services  
+description: We helped the TAFS team develop a mobile app which interfaced with their clients and also their internal tools; learn more about the solution.
 ---
 <header class="page-header page-header--tafs">
 	{% include menu.html %}
