--- a/team.html
+++ b/team.html
@@ -1,6 +1,9 @@
 ---
 layout: acklen
-title: Team Members | Acklen Avenue 
+title: Meet the people that make those software projects a success
+permalink: /team
+description: "Each project we undertake makes the world a better place. 
+Meet the people that make those projects a success. Meet the Ackleners."
 ---
 <header class="page-header page-header--ourwork">
 	{% include menu.html %}
