--- a/our-work/index.html
+++ b/our-work/index.html
@@ -5,8 +5,9 @@ description: Our Work | Tough technological challenges don't stand a chance agai
 ---
 <header class="page-header page-header--ourwork">
 	{% include menu.html %}
-	<h1>we live for <br/>elegant solutions</h1>
-	<h2>Tough technological challenges don't stand a chance against our <br/>experience, passion, and process. We'll tell you a few stories to prove it.</h2>
+	<h1>our work
+	</h1>
+	<h2>We create software solutions that empowers our clients to make smarter decisions</h2>
 </header>
 {% include ourworkPage.html %}
 {% include ContactUs.html %}
