--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@ Meet the people that make those projects a success. Meet the Ackleners."
 <header class="page-header page-header--ourwork">
 	{% include menu.html %}
 	<h1>Meet the Team</h1>
-	<h2>Each project we undertake makes the world a better place. <br/>These are the people that make those projects a success. Meet the Ackleners.</h2>
+	<h2>Each project we undertake makes the world a better place.  Our expert software engineers <br/>use agile development practices that make those projects a success, Meet the Ackleners.</h2>
 </header>
 
 <div class="team-filter-container">
