--- a/index.html
+++ b/index.html
@@ -18,3 +18,7 @@ permalink: /
 {% include factsAndTech.html %}
 {% include teamStructure.html %}
 {% include ContactUs.html %}
+
+<footer>
+	{% include homeFooter.html %}
+</footer>
