design changes on email signature and blog

--- a/assets/email-signature-hero-unit.html
+++ b/assets/email-signature-hero-unit.html
@@ -90,8 +90,8 @@
                 <td style="padding: 15px;">
                 <img width="130" src="https://acklenavenue.com/img/herounit-logo.png" alt="Hero Unit Logo">
                 </td>
-                <td width="300" style="padding-left: 15px; border-left:2px solid #1962BA ">
-                    <table border="0" cellpadding="0" cellspacing="0" width="400">
+                <td width="300" align="left" style="padding-left: 15px; border-left:2px solid #1962BA; text-align: left;">
+                    <table border="0" align="left" cellpadding="0" cellspacing="0" width="400" style="text-align: left;">
                       <tbody>
                         <tr>
                           <td style="text-align: left; font-size:18px; font-weight: bold;">
