--- a/assets/email-signature.html
+++ b/assets/email-signature.html
@@ -99,8 +99,8 @@
                 <td style="padding: 15px;">
                 <img width="70" src="http://acklenavenue.com/img/pixelheart.png" alt="acklen avenue pixel heart">
                 </td>
-                <td width="300" style="padding-left: 15px; border-left:2px solid #72C02C ">
-                    <table border="0" cellpadding="0" cellspacing="0" width="400">
+                <td width="300" align="left" style="padding-left: 15px; border-left:2px solid #72C02C; text-align: left; ">
+                    <table border="0" align="left" cellpadding="0" cellspacing="0" width="400" style="text-align: left;">
                       <tbody>
                         <tr>
                           <td style="text-align: left; font-size:18px; font-weight: bold;">
