--- a/careers/index.html
+++ b/careers/index.html
@@ -1,18 +1,20 @@
 ---
 layout: acklen-subfolder
-title: Job Board | Acklen Avenue Careers | We're hiring!
-description: "Jobs | You want a team that will own your success and work
+title: Careers Board | Acklen Avenue Careers | We're hiring!
+description: "Careers | You want a team that will own your success and work
 with the same level of passion that you bring every day. We're hiring!"
+redirect_from:
+    - /jobs/
 ---
 
 <header class="page-header">
     {% include menu.html %}
-    <h1>JOBS</h1>
+    <h1>CAREERS</h1>
     <h2>
         You want a team that will own your success and work<br/>
         with the same level of passion that you bring every day
     </h2>
-    <a href="#jobs"><img class="down-arrow-global" src="{{ "/img/triangle.svg" | prepend: base_url }}" alt="Down Arrow"></a>
+    <a href="#careers"><img class="down-arrow-global" src="{{ "/img/triangle.svg" | prepend: base_url }}" alt="Down Arrow"></a>
 </header>
 {% include jobBoard-include.html %}
 {% include ContactUs.html %}
