--- a/acklen-overview.html
+++ b/acklen-overview.html
@@ -248,7 +248,7 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 			</div><!-- SECTION TITLE-->
 			<div class="form-column">
 				<div id="form-container" class="contact-form">
-					<form id="contact-form">
+					<form id="contact-form" onsubmit="sendEmail(); return false;">
 						<div class="flex-direction">
 							<input class="form-modal-input flex-100" type="text" id="contact-name" placeholder="Name" />	
 						</div>
@@ -274,5 +274,24 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 				</div><!-- FORM CONTAINER-->
 			</div><!-- FORM COL-->
 		</div><!--WRAPPER-->
+		<script>
+			var sendEmail = function() {
+				var contactName = $('#contact-name').val();
+				var contactEmail = $('#contact-email').val();
+				var telephone = $('#telephone').val();
+				var contactMessage = $('#contact-message').val();
+				$.ajax({
+					type: "POST",
+					url: "https://u2fh5qg9k7.execute-api.us-east-1.amazonaws.com/production/send-email",
+					data: JSON.stringify({message: `Name: ${contactName}, Email: ${contactEmail}, Phone: ${telephone}, Project Details: ${contactMessage}`}),
+					contentType: "application/json; charset=utf-8",
+					dataType: "json",
+				});
+			}
+		</script>
+		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+		<script>
+			window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')
+		</script>
 	</section>
 </main>
