--- a/acklen-overview.html
+++ b/acklen-overview.html
@@ -287,6 +287,7 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 					contentType: "application/json; charset=utf-8",
 					dataType: "json",
 				});
+				$('.form-success').show(1000);
 			}
 		</script>
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
