Adding 3 rows for Textarea + jQuery FadeIn

--- a/acklen-overview.html
+++ b/acklen-overview.html
@@ -265,7 +265,7 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 							<input class="form-modal-input flex-100" type="tel" id="telephone" placeholder="Phone Number" required />
 						</div>
 						<div class="flex-direction">
-							<textarea class="form-modal-input flex-100" id="contact-message" placeholder="Your project details..."></textarea>
+							<textarea class="form-modal-input flex-100" rows="3" id="contact-message" placeholder="Your project details..."></textarea>
 						</div>
 						
 						
@@ -301,7 +301,7 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 					contentType: "application/json; charset=utf-8",
 					dataType: "json",
 				});
-				$('.form-success').slideDown(1000);
+				$('.form-success').fadeIn(1000);
 			}
 		</script>
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
