--- a/acklen-overview.html
+++ b/acklen-overview.html
@@ -7,8 +7,8 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 <header class="page-header landing">
 	{% include menu.html %}
 
-	<h1>Acklen Avenue teams spin up seamlessly,</h1>
-	<h2>partner collaboratively, and deliver value relentlessly.</h2>
+	<h1>Acklen Avenue teams spin up seamlessly, partner collaboratively, and deliver value relentlessly.</h1>
+	
 	<div class="cta">
 		<a class="btn hvr-ripple-out btn--apple" href="#contact-form"">Contact Us</a>
 	</div><!--CTA-->
