More Big Screen Tweaks

--- a/acklen-overview.html
+++ b/acklen-overview.html
@@ -259,7 +259,7 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 							<input class="form-modal-input flex-100" type="text" id="contact-name" placeholder="Name" />	
 						</div>
 						<div class="flex-direction">
-							<input class="form-modal-input flex-100" type="email" id="contact-email" placeholder="Email Address" required />
+							<input class="form-modal-input flex-100" type="email" id="contact-email" placeholder="Email" required />
 						</div>
 						<div class="flex-direction">
 							<input class="form-modal-input flex-100" type="tel" id="telephone" placeholder="Phone Number" required />
@@ -274,7 +274,7 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 						</div>
 			
 						<div style="display: flex; justify-content: center;">
-							<input id="button-form" type="submit" value="Contact Us" class="btn btn--apple hvr-ripple-out"/>
+							<input id="button-form" class="btn hvr-ripple-out btn--apple" type="submit" value="Contact Us" class="btn btn--apple hvr-ripple-out"/>
 						</div>
 					</form>
 				</div><!-- FORM CONTAINER-->
