--- a/acklen-overview.html
+++ b/acklen-overview.html
@@ -1,13 +1,13 @@
 ---
 layout: landingAd
 title: Acklen Avenue Overview
-description: Acklen Avenue teams spin up seamlessly, partner collaboratively, and deliver value relentlessly.
+description: Agile development teams that partner seamlessly, and deliver value relentlessly.
 ---
 
 <header class="page-header landing">
 	{% include menu.html %}
 
-	<h1>Acklen Avenue teams spin up seamlessly, partner collaboratively, and deliver value relentlessly.</h1>
+	<h1>Agile development teams that partner seamlessly, and deliver value relentlessly.</h1>
 	
 	<div class="cta">
 		<a class="btn hvr-ripple-out btn--apple" href="#contact-form"">Contact Us</a>
@@ -265,7 +265,7 @@ description: Acklen Avenue teams spin up seamlessly, partner collaboratively, an
 							<input class="form-modal-input flex-100" type="tel" id="telephone" placeholder="Phone Number" required />
 						</div>
 						<div class="flex-direction">
-							<textarea class="form-modal-input flex-100" rows="3" id="contact-message" placeholder="Your project details..."></textarea>
+							<textarea class="form-modal-input flex-100" rows="3" id="contact-message" placeholder="Any details on the work you wish to share? (Optional)"></textarea>
 						</div>
 						
 						
