Change empowers to empower in Our Work

--- a/our-work/index.html
+++ b/our-work/index.html
@@ -7,7 +7,7 @@ description: Our Work | Tough technological challenges don't stand a chance agai
 	{% include menu.html %}
 	<h1>our work
 	</h1>
-	<h2>We create software solutions that empowers our clients to make smarter decisions</h2>
+	<h2>We create software solutions that empower our clients to make smarter decisions</h2>
 </header>
 {% include ourworkPage.html %}
 {% include ContactUs.html %}
