Change Header Jump Link
+ Fix Testimonials H3 Spill

--- a/one-pager.html
+++ b/one-pager.html
@@ -18,7 +18,7 @@ description: Your partners in building powerful apps users love.
 	
 	
 	<div class="cta b-side">
-		<a class="btn hvr-ripple-out btn--apple" href="#contact-form"">See the Impact</a>
+		<a class="btn hvr-ripple-out btn--apple" href="#see-the-impact"">See the Impact</a>
 	</div><!--CTA-->
 	
 </header>
@@ -155,7 +155,7 @@ description: Your partners in building powerful apps users love.
 		</div><!--WRAPPER-->
 	</section>
 
-	<section class="ad-testimonials-wrapper b-side">
+	<section class="ad-testimonials-wrapper b-side" id="see-the-impact">
 		<h3>What Our Clients Say</h3>
 		<article class="ad-testimonial-item">
 			<header>
