Updating description in config and index's head for google to index the change

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: acklen
 title: "Acklen Avenue | software development company in Nashville, TN"
-description: Acklen Avenue is a leading custom software development in Nashville, Tennessee. Our talented team is passionate about clean code and simple user experience.
+description: Your partner in building powerful apps users love, Acklen Avenue offers agile software development teams as a service.
 thumbnail: https://acklenavenue.com/img/thumbnail.jpg
 type: website
 keywords: Acklen Avenue, Agile, lean, start-up, development, Custom Software Development, Mobile Development, Nashville
