--- a/acklen-overview.html
+++ b/acklen-overview.html
@@ -268,6 +268,17 @@ description: Agile development teams that partner seamlessly, and deliver value 
 							<input class="form-modal-input flex-100" type="text" id="contact-company" placeholder="Company" required />
 						</div>
 						<div class="flex-direction">
+							<select class="form-modal-input flex-100" type="text" id="company-size" placeholder="Company Size" required>
+								<option value="" selected disabled hidden>Company Size</option>
+								<option value="1-100">1-100</option>
+								<option value="101-500">101-500</option>
+								<option value="501-1000">501-1000</option>
+								<option value="1001-5000">1001-5000</option>
+								<option value="5001-10k">5001-10k</option>
+								<option value="10k +">10k +</option>
+							</select>
+						</div>
+						<div class="flex-direction">
 							<textarea class="form-modal-input flex-100" rows="3" id="contact-message" placeholder="Any details on the work you wish to share? (Optional)"></textarea>
 						</div>
 						
@@ -297,10 +308,14 @@ description: Agile development teams that partner seamlessly, and deliver value 
 				var contactEmail = $('#contact-email').val();
 				var telephone = $('#telephone').val();
 				var contactMessage = $('#contact-message').val();
+				var company = $('#contact-company').val();
+				var companySize = $('#company-size').val();
 				$.ajax({
 					type: "POST",
 					url: "https://u2fh5qg9k7.execute-api.us-east-1.amazonaws.com/production/send-email",
-					data: JSON.stringify({message: `Name: ${contactName}, Email: ${contactEmail}, Phone: ${telephone}, Project Details: ${contactMessage}, Company: ${company}`}),
+					data: JSON.stringify({
+						message: `Name: ${contactName}, Email: ${contactEmail}, Phone: ${telephone}, Project Details: ${contactMessage}, Company: ${company}, Company Size: ${companySize}`
+					}),
 					contentType: "application/json; charset=utf-8",
 					dataType: "json",
 				});
