redirecting to 'thank you' page after submitting form on pager

--- a/one-pager.html
+++ b/one-pager.html
@@ -329,7 +329,8 @@ description: Your partners in building powerful apps users love.
 					contentType: "application/json; charset=utf-8",
 					dataType: "json",
 				});
-				$('.form-success').fadeIn(1000);
+				var url = "https://acklenavenue.com/thank-you.html";    
+				$(location).attr('href',url);
 			}
 		</script>
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
