--- a/thank-you.html
+++ b/thank-you.html
@@ -6,7 +6,7 @@ permalink: /thank-you.html
 <div id="notFound">
   <img src="/img/aa-logo-dark.svg" alt="Acklen Avenue" />
   <div class="notFound__wrapper">
-    <div class="notFound-content flex-100">
+    <div class="notFound-content flex-100" id="thank-you">
       <h1>Thank You!</h1>
       <h3>
         Thanks for contacting us! A member of Acklen Avenue's Client Services
