change healine, cta copy and expertise paragraph

--- a/one-pager.html
+++ b/one-pager.html
@@ -11,14 +11,14 @@ description: Your partners in building powerful apps users love.
 			<img src="img/heart-sticker.svg" alt="Green Pixel Heart">
 		</div><!-- STICKER -->
 		<div class="pager headline">
-			<h1>Your partners in building powerful apps users love.</h1>
-			<h2>Agile development teams that partner seamlessly, and deliver value relentlessly.</h2>
+			<h1>Agile development teams as a service.</h1>
+			<h2>Your shortcut to a high performing software delivery team.</h2>
 		</div><!-- HEADLINE-->
 	</div><!-- PAGER INTRO -->
 	
 	
 	<div class="cta b-side">
-		<a class="btn hvr-ripple-out btn--apple" href="#see-the-impact"">See the Impact</a>
+		<a class="btn hvr-ripple-out btn--apple" href="#see-the-impact"">Learn More</a>
 	</div><!--CTA-->
 	
 </header>
@@ -26,7 +26,7 @@ description: Your partners in building powerful apps users love.
 <main>
 	<section id="our-expertise" class="b-side">
 		<h3>Our Expertise</h3>
-		<p>Acklen Avenue builds custom software applications for ambitious companies ranging from Fortune 500s to high-growth funded startups.</p>
+		<p>Since 2011, Acklen Avenue has built custom web and mobile applications that empower companies, from fast-growing teams to Fortune 500s, to delight their users and elevate their processes.</p>
 		<ul>
 			<li>
 				<figure>
