change cta link destination, change section order (industry and technology)

--- a/one-pager.html
+++ b/one-pager.html
@@ -18,7 +18,7 @@ description: Your partners in building powerful apps users love.
 	
 	
 	<div class="cta b-side">
-		<a class="btn hvr-ripple-out btn--apple" href="#see-the-impact"">Learn More</a>
+		<a class="btn hvr-ripple-out btn--apple" href="#our-expertise"">Learn More</a>
 	</div><!--CTA-->
 	
 </header>
@@ -82,10 +82,6 @@ description: Your partners in building powerful apps users love.
 				</div><!-- TITLE-->
 			</li>
 		</ul>
-	</section>
-	
-	<section class="landing-tech-stack">
-		{% include techStack.html %}
 	</section>
 	
 	<section id="industry-experience">
@@ -153,6 +149,10 @@ description: Your partners in building powerful apps users love.
 				</li>
 			</ul>
 		</div><!--WRAPPER-->
+	</section>
+
+	<section class="landing-tech-stack">
+		{% include techStack.html %}
 	</section>
 
 	<section class="ad-testimonials-wrapper b-side" id="see-the-impact">
