Change email to company email, make project description mandatory and change placeholder to reflect it

--- a/acklen-overview.html
+++ b/acklen-overview.html
@@ -259,7 +259,7 @@ description: Agile development teams that partner seamlessly, and deliver value 
 							<input class="form-modal-input flex-100" type="text" id="contact-name" placeholder="Name" />	
 						</div>
 						<div class="flex-direction">
-							<input class="form-modal-input flex-100" type="email" id="contact-email" placeholder="Email" required />
+							<input class="form-modal-input flex-100" type="email" id="contact-email" placeholder="Company Email" required />
 						</div>
 						<div class="flex-direction">
 							<input class="form-modal-input flex-100" type="tel" id="telephone" placeholder="Phone Number" required />
@@ -279,7 +279,7 @@ description: Agile development teams that partner seamlessly, and deliver value 
 							</select>
 						</div>
 						<div class="flex-direction">
-							<textarea class="form-modal-input flex-100" rows="3" id="contact-message" placeholder="Any details on the work you wish to share? (Optional)"></textarea>
+							<textarea class="form-modal-input flex-100" rows="3" id="contact-message" placeholder="Simply describe your project here" required></textarea>
 						</div>
 						
 						
