--- a/one-pager.html
+++ b/one-pager.html
@@ -265,7 +265,7 @@ description: Your partners in building powerful apps users love.
 							<input class="form-modal-input flex-100" type="text" id="contact-name" placeholder="Name" />	
 						</div>
 						<div class="flex-direction">
-							<input class="form-modal-input flex-100" type="email" id="contact-email" placeholder="Email" required />
+							<input class="form-modal-input flex-100" type="email" id="contact-email" placeholder="Company Email" required />
 						</div>
 						<div class="flex-direction">
 							<input class="form-modal-input flex-100" type="tel" id="telephone" placeholder="Phone Number" required />
@@ -285,7 +285,7 @@ description: Your partners in building powerful apps users love.
 							</select>
 						</div>
 						<div class="flex-direction">
-							<textarea class="form-modal-input flex-100" rows="3" id="contact-message" placeholder="Any details on the work you wish to share? (Optional)"></textarea>
+							<textarea class="form-modal-input flex-100" rows="3" id="contact-message" placeholder="Simply describe your project here" required></textarea>
 						</div>
 						
 						
