Changed landing copy

--- a/one-pager.html
+++ b/one-pager.html
@@ -12,7 +12,7 @@ description: Your partners in building powerful apps users love.
 		</div><!-- STICKER -->
 		<div class="pager headline">
 			<h1>Agile development teams as a service.</h1>
-			<h2>Your shortcut to a high performing software delivery team.</h2>
+			<h2>We are a leading software development company with years of experience in building and cultivating success stories for businesses of all sizes through our high performing software delivery team.</h2>
 		</div><!-- HEADLINE-->
 	</div><!-- PAGER INTRO -->
 	
