--- a/perks/index.html
+++ b/perks/index.html
@@ -9,5 +9,5 @@ description: Working Perks | Here you’ll find a list of the Perks that come wi
     <h1>Employee Perks</h1>
 </header>
 
-{% include employeeperks.html %}
+{% include EmployeePerks.html %}
 {% include ContactUs.html %}
