design changes 30  jul

--- a/assets/email-recruitment/index.html
+++ b/assets/email-recruitment/index.html
@@ -648,7 +648,7 @@
                                       </tr>
                                       <tr>
                                         <td  style="font-family: 'Montserrat',Arial, sans-serif; color:#4F4F4F; font-size: 14px;" >
-                                          We go from idea to value - ASAP.
+                                          We go from idea <br/>to value - ASAP.
                                          </td>
                                       </tr>
                                     </tbody>
@@ -669,7 +669,7 @@
                                       </tr>
                                       <tr>
                                         <td  style="font-family: 'Montserrat',Arial, sans-serif; color:#4F4F4F; font-size: 14px;" >
-                                          We are a team of teams.
+                                          We are a team <br/>of teams.
                                          </td>
                                       </tr>
                                     </tbody>
@@ -921,7 +921,7 @@
                                   </table>
                                 </td>
                                 <td width="10%" cellpadding="0" cellspacing="0" style="font-family: 'Montserrat',Arial, sans-serif; font-size: 76px; line-height: 0; padding: 0;margin: 0; color: #72C02C;" > 
-                                  “
+                                  „
                                 </td>
                               </tr>
                             </tbody>
