--- a/assets/email-recruitment/index.html
+++ b/assets/email-recruitment/index.html
@@ -845,7 +845,7 @@
                       </tr>
                       <tr>
                         <td>
-                          <img style="padding: 20px;" width="160" align="center" border="0" src="https://acklenavenue.com/assets/email-recruitment/img/fabio.png">
+                          <img style="padding: 20px;" width="160" align="center" border="0" src="https://acklenavenue.com/assets/email-recruitment/img/jimmy.png">
                         </td>         
                       </tr>
                       <tr>
@@ -861,12 +861,12 @@
                                     <tbody>
                                       <tr>
                                         <td style="font-family: 'Montserrat',Arial, sans-serif; color:#4F4F4F; font-weight: 700; font-size: 25px;">
-                                          Fabio Castillo
+                                          Jimmy Ramos 
                                         </td>
                                       </tr>
                                       <tr>
                                         <td style="font-family: 'Montserrat',Arial, sans-serif; font-style: italic;color:#4F4F4F; font-weight: 300; font-size: 14px;">
-                                          Scrum Master
+                                          Lead Developer
                                         </td>
                                       </tr>
                                     </tbody>
@@ -886,16 +886,8 @@
                             <tbody>
                               <tr>
                                 <td  style="font-family: 'Montserrat',Arial, sans-serif; font-style: italic; color:#4F4F4F; font-weight: 300; font-size: 16px; line-height: 24px; padding: 22px 0;">
-                                  The scrum master career in Acklen Avenue has constituted an innovative
-                                  way of serving, assisting and supporting my team, based on agile
-                                  principles and values. This role has given me the opportunity to learn,
-                                  adapt and develop different practices within the team, related to the team
-                                  growth. Is a constant learning experience that –in a dynamic environment-
-                                  has helped me to grow as a person, as a leader and a team member.
-                                  Making sure that my team has all the resources to work as a well-oiled
-                                  machine capable of overcoming any obstacle; has boosted my confidence,
-                                  my morale and pride of being a part of this wonderful organization called
-                                  Acklen Avenue.
+                                  Working at AA in this role has changed me completely, I can say without any doubt that I’m a different person than I was a year ago when I started working here, being part of AA means just more than being a developer or a piece of a team, you really are seen here, you have voice and you’re heard, and I’m glad all opinions are taken. When dealing with clients and in general, when working in tech never is enough, you’ll lack some skills, you’ll have to learn, you have to adapt and tech, be taught. This position has taught me that and much more, from the human perspective it has helped me build connections with my teammates, have fun while working, collaborate and have other people's back because they have your’s, that’s for sure. 
+
                                 </td>
                               </tr>
                             </tbody>
