changes in email

--- a/community/aboutus/index.html
+++ b/community/aboutus/index.html
@@ -430,7 +430,7 @@
                                     <tbody>
                                       <tr>
                                         <td width="215" style="font-family: 'Montserrat',Arial, sans-serif; padding: 28px 25px; text-align: left; color:#4F4959;">
-                                          Full Stack Developers 
+                                          Software Developers
                                         </td>
                                         <td style="padding: 28px 25px; color: #72C02C; text-align: right;" >
                                           <a target="_blank"  style="font-family: 'Montserrat',Arial, sans-serif; color: #72C02C; text-decoration: none;" href="https://acklenavenue.com/careers/software-developer">Learn More ></a>
@@ -454,7 +454,7 @@
                                     <tbody>
                                       <tr>
                                         <td width="215" style="font-family: 'Montserrat',Arial, sans-serif; padding: 28px 25px; text-align: left; color:#4F4959;">
-                                          Quality Assurance Engineers
+                                          QA Software Engineers
                                         </td>
                                         <td style="padding: 28px 25px; color: #72C02C; text-align: right;" >
                                           <a target="_blank" style="font-family: 'Montserrat',Arial, sans-serif; color: #72C02C; text-decoration: none;" href="https://acklenavenue.com/careers/qa-engineer">Learn More ></a>
@@ -468,30 +468,6 @@
                           </table>
                         </td>
                       </tr>
-                      <!-- <tr>
-                        <td>
-                          <table align="center" class="flex-full" border="0" cellpadding="0" cellspacing="0" width="560">
-                            <tbody>
-                              <tr>
-                                <td width="100%" style="padding: 0px 10px 30px;">
-                                  <table style="background: #FFFFFF; border: 1px solid rgba(0, 0, 0, 0.12); box-shadow: 0px 8px 29px rgba(0, 0, 0, 0.0649909); border-radius: 8px;" border="0" cellpadding="0" cellspacing="0" width="100%">
-                                    <tbody>
-                                      <tr>
-                                        <td width="215" style="font-family: 'Montserrat',Arial, sans-serif; padding: 28px 25px; text-align: left; color:#4F4959;">
-                                          Business Analysts
-                                        </td>
-                                        <td style="padding: 28px 25px; color: #72C02C; text-align: right;" >
-                                          <a style="font-family: 'Montserrat',Arial, sans-serif; color: #72C02C; text-decoration: none;" href="#">Learn More ></a>
-                                        </td>
-                                      </tr>
-                                    </tbody>
-                                  </table>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr> -->
                       <tr>
                         <td>
                           <table align="center" class="flex-full" border="0" cellpadding="0" cellspacing="0" width="560">
@@ -526,7 +502,7 @@
                                     <tbody>
                                       <tr>
                                         <td   width="215" style="font-family: 'Montserrat',Arial, sans-serif; padding: 28px 25px; text-align: left; color:#4F4959;">
-                                          UI/UX Designers
+                                          UX/UI Designers
                                         </td>
                                         <td style="padding: 28px 25px; color: #72C02C; text-align: right;" >
                                           <a target="_blank" style="font-family: 'Montserrat',Arial, sans-serif; color: #72C02C; text-decoration: none;" href="https://acklenavenue.com/careers/designer">Learn More ></a>
@@ -569,34 +545,7 @@
                   </table>
                 </td>
               </tr> 
-              <!-- <tr>
-                <td style=" padding-left:20px; padding-right:20px; padding-top: 45px; padding-bottom: 45px;">
-                  <table align="center" style="text-align: center;" border="0" cellpadding="0" cellspacing="0">
-                    <tbody>
-                      <tr>
-                        <td style="font-family: 'Montserrat',Arial, sans-serif; color:#4F4F4F; font-weight: 700; font-size: 30px;">
-                          Internships
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <img style="padding: 30px;" width="80" align="center" border="0" src="https://acklenavenue.com/assets/email-recruitment/img/interships.png">
-                        </td>         
-                      </tr>
-                      <tr>
-                        <td class="flex-full"  style="font-family: 'Montserrat',Arial, sans-serif; color:#4F4F4F; font-size: 20px; padding-top: 15px;padding-bottom: 15px;" width="525">
-                          Are you about to graduate from College? We invite you to join our Internship Program.
-                        </td>
-                      </tr>
-                      <tr>
-                        <td style="padding-top: 25px; padding-bottom: 15px;" align="center">
-                          <a style="font-family: 'Montserrat',Arial, sans-serif; background: #72C02C; color:white; font-size: 17px; padding:15px 24px; text-decoration: none; border-radius: 100px" href="#">Apply for an internship</a>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </td>
-              </tr> -->
+
               <tr>
                 <td style=" padding-left:20px; padding-right:20px; padding-top: 50px; padding-bottom: 0px;">
                   <table style="text-align: center;" width="100%" border="0" cellpadding="0" cellspacing="0">
