--- a/community/aboutus/index.html
+++ b/community/aboutus/index.html
@@ -108,7 +108,7 @@
                       </tr>
                       <tr>
                         <td class="flex-full"  style="font-family: 'Montserrat',Arial, sans-serif; color:#4F4F4F; font-size: 20px; padding-top: 15px;padding-bottom: 15px;font-weight: 300;" width="525">
-                          We are custom software development company based in Nashville, TN. We have a passion for building software that people love to use.              
+                          We are a custom software development company based in Nashville, TN. We have a passion for building software that people love to use.              
                        </td>
                       </tr>
                     </tbody>
@@ -835,7 +835,7 @@
                             <tbody>
                               <tr>
                                 <td  style="font-family: 'Montserrat',Arial, sans-serif; font-style: italic; color:#4F4F4F; font-weight: 300; font-size: 16px; line-height: 24px; padding: 22px 0;">
-                                  Working at AA in this role has changed me completely, I can say without any doubt that I’m a different person than I was a year ago when I started working here, being part of AA means just more than being a developer or a piece of a team, you really are seen here, you have voice and you’re heard, and I’m glad all opinions are taken. When dealing with clients and in general, when working in tech never is enough, you’ll lack some skills, you’ll have to learn, you have to adapt and tech, be taught. This position has taught me that and much more, from the human perspective it has helped me build connections with my teammates, have fun while working, collaborate and have other people's back because they have your’s, that’s for sure. 
+                                  Working at AA in this role has changed me completely, I can say without any doubt that I’m a different person than I was a year ago when I started working here, being part of AA means just more than being a developer or a piece of a team, you really are seen here, you have a voice and you’re heard, and I’m glad all opinions are taken. When dealing with clients and in general, when working in tech never is enough, you’ll lack some skills, you’ll have to learn, you have to adapt and tech, be taught. This position has taught me that and much more, from the human perspective it has helped me build connections with my teammates, have fun while working, collaborate and have other people's back because they have yours, that’s for sure. 
 
                                 </td>
                               </tr>
