privacy policy changes

--- a/privacy.html
+++ b/privacy.html
@@ -70,11 +70,9 @@ description: "Acklen Avenue Privacy Policy"
                                         collect.</span></strong></span></p>
 
         <p style="font-size: 15px; line-height: 1.5;"><span style="color: rgb(89, 89, 89);"><br></span></p>
-        <p style="font-size:15px;"><span style="color: rgb(0, 0, 0);"><strong><span style="font-size: 19px;">
+        <p style="font-size:15px;"><span style="color: rgb(0, 0, 0);"><strong><span style="font-size: 19px;"><span data-custom-class="heading_1">TABLE OF CONTENTS</span></span></strong></span></p>
 
-         <span data-custom-class="heading_1">TABLE OF CONTENTS</span></span></strong></span></p>
-
-         <u style="list-style: none;">
+         <ul style="list-style: none;">
                  <li><a data-custom-class="link" href="#infocollect">1. WHAT INFORMATION DO WE COLLECT?</a></li>
                 <li><a data-custom-class="link" href="#infouse">2.HOW DO WE USE YOUR INFORMATION?</a></li>
                 <li><a data-custom-class="link"href="#infoshare">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</a></li>
@@ -91,11 +89,8 @@ description: "Acklen Avenue Privacy Policy"
                 <li><a data-custom-class="link" href="#caresidents">12. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY
                         RIGHTS?</span></a></li>
                 <li><a data-custom-class="link" href="#policyupdates">13. DO WE MAKE UPDATES TO THIS NOTICE?</a></li>
-                <li><a data-custom-class="link" href="#contact">14.
-                        HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li>
-                <li></li>
-                
-        <ul>
+                <li><a data-custom-class="link" href="#contact">14. HOW CAN YOU CONTACT US ABOUT THIS NOTICE?</a></li>     
+        </ul>
 
         </div>
 
