--- a/our-work/fortune500partnership.html
+++ b/our-work/fortune500partnership.html
@@ -1,9 +1,8 @@
 ---
-layout: acklen-subfolder
-title:  
-description: 
+layout: fortune500partnershipLayout
+title: Fortune 500 partnership
+description: complex insights made simple
 ---
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <header class="page-header page-header--fortune500partnership">
 	<div class="title-center--fortune500partnership">
 		<div class="aa-logo--fortune500partnership">
@@ -27,7 +26,7 @@ description:
         Our primary goal was to provide a unified and intuitive forecasting system company-wide which would capture and make accessible valuable data on projects, while increasing accuracy and efficiency, and delighting its users.
     </p>
 </section>
-<section class="showcase">
+<section>
     <svg width="100%" height="336" viewBox="0 0 800 336" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g filter="url(#filter0_d)">
         <rect x="300.621" y="45.0613" width="198" height="245" rx="28" fill="white"/>
@@ -249,15 +248,12 @@ description:
 	<div class="fortune500partnership-footer__avatar">
 		<img class="fortune500partnership-footer__avatar__img" src="https://www.gravatar.com/avatar/4ff5890357a20a19a7a1dda68422c770?s=400&d=mm" alt="">
 		<h3>Colleen Reidelbach</h3>
-		<h4>VP of Client Services</h4>
+        <h4>VP of Client Services</h4>
+        <a target="_blank" href="https://calendly.com/colleenreidelbach/30-minute-call" class="btn btn--apple hvr-ripple-out md-trigger fortune500partnership-CTA" >Ready for results?</a>
 	</div>
 	<div class="fortune500partnership-footer__contact">
 		<p>Contact:</p>
-		<a href="mailto:info@acklenavenue.com;">info@acklenavenue.com</a>
+		<a href="mailto:colleen@acklenavenue.com;">colleen@acklenavenue.com</a>
 		<a href="tel:615-988-4700">(615) 988-4700</a>
 	</div>
 </section>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-	AOS.init();
-  </script>
