add companies logos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ permalink: /
 </header>
 
 {% include drivenByPassion.html %}
+{% include CompaniesSection.html %}
 {% include testimonialsHome.html %}
 {% include workForYou.html %}
 {% include factsAndTech.html %}
