Modals for pathways images done.

--- a/career-pathways/index.html
+++ b/career-pathways/index.html
@@ -4,13 +4,12 @@ title: Career Pathways | Acklen Avenue - Custom software development
 description: Career Pathways | Here you’ll find every Guild's pathways information flyers.
 ---
 
-<header class="page-header">
+<header class="pathways-header page-header">
     {% include menu.html %}
     <h1>Professional <br/> Development</h1>
     <h2>
         Continuinig training and education of groups and individuals in regards <br/> to their career. 
     </h2>
-    <a href="#pathways"><img class="down-arrow-global" src="{{ "/img/triangle.svg" | prepend: base_url }}" alt="Down Arrow"></a>
 </header>
 {% include pathways.html %}
 {% include ContactUs.html %}
