--- a/our-work/fortune500partnership.html
+++ b/our-work/fortune500partnership.html
@@ -249,7 +249,7 @@ description: complex insights made simple
 		<img class="fortune500partnership-footer__avatar__img" src="https://www.gravatar.com/avatar/4ff5890357a20a19a7a1dda68422c770?s=400&d=mm" alt="">
 		<h3>Colleen Reidelbach</h3>
         <h4>VP of Client Services</h4>
-        <a target="_blank" href="https://calendly.com/colleenreidelbach/30-minute-call" class="btn btn--apple hvr-ripple-out md-trigger fortune500partnership-CTA" >Ready for results?</a>
+        <a target="_blank" href="https://calendly.com/colleenreidelbach/meet-acklen-avenue?month=2021-02" class="btn btn--apple hvr-ripple-out md-trigger fortune500partnership-CTA" >Ready for results?</a>
 	</div>
 	<div class="fortune500partnership-footer__contact">
 		<p>Contact:</p>
